--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syncopate:wght@400;700&display=swap");
 
 :root {
-  --primary-color: #f5b754;
+  --primary-color: #FF5205ff;
   --primary-color-dark: #d6a04a;
   --text-dark: #15191d;
   --text-light: #737373;
@@ -96,12 +96,8 @@ nav {
   background-color: var(--primary-color);
 }
 
-.nav__logo a {
-  font-size: 1.5rem;
-  font-weight: 700;
-  font-family: var(--header-font);
-  color: var(--white);
-  letter-spacing: -2px;
+.nav__logo img {
+  width: 150px;
 }
 
 .nav__menu__btn {
